feat(sample): Users API with API key, rate limit, keyset pagination; fix JSON schema; docker app

--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -31,6 +31,25 @@ services:
       - mysqldata:/var/lib/mysql
       - ./mysql_init.sql:/docker-entrypoint-initdb.d/01_init.sql:ro
 
+  app:
+    build:
+      context: ..
+      dockerfile: Dockerfile
+    container_name: gomint-app
+    environment:
+      HTTP_PORT: "8080"
+      API_KEY: "secret"
+      DB_HOST: "postgres"
+      DB_PORT: "5432"
+      DB_USER: "gomint"
+      DB_PASS: "gomint"
+      DB_NAME: "gomint"
+      DB_SSLMODE: "disable"
+    depends_on:
+      - postgres
+    ports:
+      - "8080:8080"
+
 volumes:
   pgdata:
   mysqldata:
